--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,12 +72,7 @@ services:
       sh -c "
         pip install trino sqlalchemy-trino &&
         superset db upgrade &&
-        superset fab create-admin
-          --username admin
-          --firstname Superset
-          --lastname Admin
-          --email admin@superset.com
-          --password admin &&
+        superset fab create-admin --username admin --firstname Superset --lastname Admin --email admin@superset.com --password admin &&
         superset init &&
         superset run -p 8088 -h 0.0.0.0
       "
