--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - brand-dashboard-net
 
   superset:
-    image: apache/superset:latest
+    build: ./superset
     container_name: superset
     ports:
       - "8088:8088"
@@ -65,21 +65,17 @@ services:
       - MONGODB_PORT=27017
     volumes:
       - ./superset_config.py:/app/superset_config.py
+      - ./superset_init.sh:/app/superset_init.sh
       - superset-data:/var/lib/superset
+      - superset-db:/app/superset.db
     networks:
       - brand-dashboard-net
-    command: >
-      sh -c "
-        pip install trino sqlalchemy-trino &&
-        superset db upgrade &&
-        superset fab create-admin --username admin --firstname Superset --lastname Admin --email admin@superset.com --password admin &&
-        superset init &&
-        superset run -p 8088 -h 0.0.0.0
-      "
+
 
 volumes:
   mongo-data:
   superset-data:
+  superset-db:
 
 networks:
   brand-dashboard-net:
