--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.0",
+    "@superset-ui/embedded-sdk": "^0.1.3",
     "axios": "^1.6.2",
-    "@superset-ui/embedded-sdk": "^0.1.0-alpha.9"
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
