--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,10 @@ jwt.expiration=86400000
 # 24 hours
 
 superset.guest_token.secret=hiUasToS3ihDkBhBTyRB3trC1v9SzWH_nWJehi5B2tI
+
+# Superset Configuration
+superset.url=http://localhost:8088
+superset.dashboard.id=402eeb7f-21dc-41ab-8006-4779ffc9530f
+# Dashboard UUID from Superset (actual existing dashboard)
+superset.api_key=admin
+# Superset admin username for API access
