--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ superset.guest_token.secret=hiUasToS3ihDkBhBTyRB3trC1v9SzWH_nWJehi5B2tI
 
 # Superset Configuration
 superset.url=http://localhost:8088
-superset.dashboard.id=402eeb7f-21dc-41ab-8006-4779ffc9530f
-# Dashboard UUID from Superset (actual existing dashboard)
+superset.dashboard.id=1
+# Dashboard ID from Superset examples (should exist after loading examples)
 superset.api_key=admin
 # Superset admin username for API access
